--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,14 @@
         <version>2.14.1</version> <!-- Use the latest version -->
     </dependency>
 
+<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+<dependency>
+    <groupId>com.aventstack</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>5.1.1</version>
+</dependency>
+
+
 </dependencies>
 
 </project>
